yaml/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      terminationGracePeriodSeconds: 3
      restartPolicy: Always
      containers:
      - name: web
        image: core-harbor.entigo.io/demo/example-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
